# iostream

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: lib.rs
src/System/IO/: mod.rs
src/System/IO/File/: mod.rs
src/io/: mod.rs
src/io/file/: mod.rs
src/io/memory/: memory_stream.rs  mod.rs
src/io/stream_rw/: mod.rs  stream_reader.rs  stream_writer.rs
tests/: test.rs
tests/filetest/: mod.rs  test_new_filestream.rs  test_read.rs  test_rw.rs  test_write.rs
tests/memtest/: mod.rs  test_read.rs  test_write.rs
tests/rwtest/: mod.rs  test_rw.rs  test_rw_bige.rs
tests/testmem/: test_read.rs
