cmake_minimum_required(VERSION 3.12)
project(IOStream)

set(CMAKE_CXX_STANDARD 14)

add_executable(IOStream
        src/System/IO/File/mod.rs
        src/System/IO/mod.rs
        src/System/mod.rs
        src/lib.rs
        target/debug/.fingerprint/IOStream-3329cd1be34b84f0/dep-test-integration-test-testnewFileStream-3329cd1be34b84f0
        target/debug/.fingerprint/IOStream-3329cd1be34b84f0/test-integration-test-testnewFileStream-3329cd1be34b84f0
        target/debug/.fingerprint/IOStream-3329cd1be34b84f0/test-integration-test-testnewFileStream-3329cd1be34b84f0.json
        target/debug/.fingerprint/IOStream-45757aec08405c15/dep-lib-IOStream-45757aec08405c15
        target/debug/.fingerprint/IOStream-45757aec08405c15/lib-IOStream-45757aec08405c15
        target/debug/.fingerprint/IOStream-45757aec08405c15/lib-IOStream-45757aec08405c15.json
        target/debug/.fingerprint/IOStream-9ad5ab8b1c056beb/dep-test-integration-test-testread-9ad5ab8b1c056beb
        target/debug/.fingerprint/IOStream-9ad5ab8b1c056beb/test-integration-test-testread-9ad5ab8b1c056beb
        target/debug/.fingerprint/IOStream-9ad5ab8b1c056beb/test-integration-test-testread-9ad5ab8b1c056beb.json
        target/debug/.fingerprint/IOStream-dd5f61749d9abdc9/dep-test-lib-IOStream-dd5f61749d9abdc9
        target/debug/.fingerprint/IOStream-dd5f61749d9abdc9/test-lib-IOStream-dd5f61749d9abdc9
        target/debug/.fingerprint/IOStream-dd5f61749d9abdc9/test-lib-IOStream-dd5f61749d9abdc9.json
        target/debug/.fingerprint/libc-15c3f7a384786f28/dep-lib-libc-15c3f7a384786f28
        target/debug/.fingerprint/libc-15c3f7a384786f28/lib-libc-15c3f7a384786f28
        target/debug/.fingerprint/libc-15c3f7a384786f28/lib-libc-15c3f7a384786f28.json
        target/debug/.fingerprint/libc-487f9851ef2dddb2/dep-lib-libc-487f9851ef2dddb2
        target/debug/.fingerprint/libc-487f9851ef2dddb2/lib-libc-487f9851ef2dddb2
        target/debug/.fingerprint/libc-487f9851ef2dddb2/lib-libc-487f9851ef2dddb2.json
        target/debug/.fingerprint/System_IO-142abea561b70ead/dep-lib-System_IO-142abea561b70ead
        target/debug/.fingerprint/System_IO-142abea561b70ead/lib-System_IO-142abea561b70ead
        target/debug/.fingerprint/System_IO-142abea561b70ead/lib-System_IO-142abea561b70ead.json
        target/debug/.fingerprint/System_IO-4373fe013cd1418e/dep-test-integration-test-testread-4373fe013cd1418e
        target/debug/.fingerprint/System_IO-4373fe013cd1418e/test-integration-test-testread-4373fe013cd1418e
        target/debug/.fingerprint/System_IO-4373fe013cd1418e/test-integration-test-testread-4373fe013cd1418e.json
        target/debug/.fingerprint/System_IO-47ab421c246052ed/dep-test-lib-System_IO-47ab421c246052ed
        target/debug/.fingerprint/System_IO-47ab421c246052ed/test-lib-System_IO-47ab421c246052ed
        target/debug/.fingerprint/System_IO-47ab421c246052ed/test-lib-System_IO-47ab421c246052ed.json
        target/debug/.fingerprint/System_IO-6af5a3c2d0a98fb0/dep-test-integration-test-testnewFileStream-6af5a3c2d0a98fb0
        target/debug/.fingerprint/System_IO-6af5a3c2d0a98fb0/test-integration-test-testnewFileStream-6af5a3c2d0a98fb0
        target/debug/.fingerprint/System_IO-6af5a3c2d0a98fb0/test-integration-test-testnewFileStream-6af5a3c2d0a98fb0.json
        target/debug/.fingerprint/System_IO-7736de2c8d058f59/dep-lib-System_IO-7736de2c8d058f59
        target/debug/.fingerprint/System_IO-7736de2c8d058f59/lib-System_IO-7736de2c8d058f59
        target/debug/.fingerprint/System_IO-7736de2c8d058f59/lib-System_IO-7736de2c8d058f59.json
        target/debug/.fingerprint/System_IO-7eef161e7da343fb/dep-lib-System_IO-7eef161e7da343fb
        target/debug/.fingerprint/System_IO-7eef161e7da343fb/lib-System_IO-7eef161e7da343fb
        target/debug/.fingerprint/System_IO-7eef161e7da343fb/lib-System_IO-7eef161e7da343fb.json
        target/debug/.fingerprint/System_IO-834e8d981cf4150d/dep-test-integration-test-testnewFileStream-834e8d981cf4150d
        target/debug/.fingerprint/System_IO-834e8d981cf4150d/test-integration-test-testnewFileStream-834e8d981cf4150d
        target/debug/.fingerprint/System_IO-834e8d981cf4150d/test-integration-test-testnewFileStream-834e8d981cf4150d.json
        target/debug/.fingerprint/System_IO-c8efba17c1d15ab2/dep-test-integration-test-testnewFileStream-c8efba17c1d15ab2
        target/debug/.fingerprint/System_IO-c8efba17c1d15ab2/test-integration-test-testnewFileStream-c8efba17c1d15ab2
        target/debug/.fingerprint/System_IO-c8efba17c1d15ab2/test-integration-test-testnewFileStream-c8efba17c1d15ab2.json
        target/debug/.fingerprint/System_IO-d74e5491a0989faf/dep-test-lib-System_IO-d74e5491a0989faf
        target/debug/.fingerprint/System_IO-d74e5491a0989faf/test-lib-System_IO-d74e5491a0989faf
        target/debug/.fingerprint/System_IO-d74e5491a0989faf/test-lib-System_IO-d74e5491a0989faf.json
        target/debug/.fingerprint/System_IO-db641a2924d26464/dep-test-integration-test-testnewFileStream-db641a2924d26464
        target/debug/.fingerprint/System_IO-db641a2924d26464/test-integration-test-testnewFileStream-db641a2924d26464
        target/debug/.fingerprint/System_IO-db641a2924d26464/test-integration-test-testnewFileStream-db641a2924d26464.json
        target/debug/.fingerprint/System_IO-e5f0b93606766702/dep-test-lib-System_IO-e5f0b93606766702
        target/debug/.fingerprint/System_IO-e5f0b93606766702/test-lib-System_IO-e5f0b93606766702
        target/debug/.fingerprint/System_IO-e5f0b93606766702/test-lib-System_IO-e5f0b93606766702.json
        target/debug/.fingerprint/System_IO-e67fa4f0f250d492/dep-test-lib-System_IO-e67fa4f0f250d492
        target/debug/.fingerprint/System_IO-e67fa4f0f250d492/test-lib-System_IO-e67fa4f0f250d492
        target/debug/.fingerprint/System_IO-e67fa4f0f250d492/test-lib-System_IO-e67fa4f0f250d492.json
        target/debug/.fingerprint/System_IO-f8418c9f2f271366/dep-lib-System_IO-f8418c9f2f271366
        target/debug/.fingerprint/System_IO-f8418c9f2f271366/lib-System_IO-f8418c9f2f271366
        target/debug/.fingerprint/System_IO-f8418c9f2f271366/lib-System_IO-f8418c9f2f271366.json
        target/debug/deps/IOStream-45757aec08405c15.d
        target/debug/deps/IOStream-dd5f61749d9abdc9.d
        target/debug/deps/libc-15c3f7a384786f28.d
        target/debug/deps/libc-487f9851ef2dddb2.d
        target/debug/deps/libIOStream-45757aec08405c15.rmeta
        target/debug/deps/libIOStream-dd5f61749d9abdc9.rmeta
        target/debug/deps/liblibc-15c3f7a384786f28.rlib
        target/debug/deps/liblibc-487f9851ef2dddb2.rmeta
        target/debug/deps/libSystem_IO-142abea561b70ead.rlib
        target/debug/deps/libSystem_IO-7736de2c8d058f59.rlib
        target/debug/deps/libSystem_IO-7eef161e7da343fb.rmeta
        target/debug/deps/libSystem_IO-e5f0b93606766702.rmeta
        target/debug/deps/libSystem_IO-e67fa4f0f250d492.rmeta
        target/debug/deps/libSystem_IO-f8418c9f2f271366.rmeta
        target/debug/deps/libtestnewFileStream-3329cd1be34b84f0.rmeta
        target/debug/deps/libtestnewFileStream-c8efba17c1d15ab2.rmeta
        target/debug/deps/libtestnewFileStream-db641a2924d26464.rmeta
        target/debug/deps/libtestread-4373fe013cd1418e.rmeta
        target/debug/deps/libtestread-9ad5ab8b1c056beb.rmeta
        target/debug/deps/System_IO-142abea561b70ead.d
        target/debug/deps/System_IO-47ab421c246052ed.d
        target/debug/deps/System_IO-47ab421c246052ed.exe
        target/debug/deps/System_IO-7736de2c8d058f59.d
        target/debug/deps/System_IO-7eef161e7da343fb.d
        target/debug/deps/System_IO-d74e5491a0989faf.d
        target/debug/deps/System_IO-d74e5491a0989faf.exe
        target/debug/deps/System_IO-e5f0b93606766702.d
        target/debug/deps/System_IO-e67fa4f0f250d492.d
        target/debug/deps/System_IO-f8418c9f2f271366.d
        target/debug/deps/testnewFileStream-3329cd1be34b84f0.d
        target/debug/deps/testnewFileStream-6af5a3c2d0a98fb0.d
        target/debug/deps/testnewFileStream-6af5a3c2d0a98fb0.exe
        target/debug/deps/testnewFileStream-834e8d981cf4150d.d
        target/debug/deps/testnewFileStream-834e8d981cf4150d.exe
        target/debug/deps/testnewFileStream-c8efba17c1d15ab2.d
        target/debug/deps/testnewFileStream-db641a2924d26464.d
        target/debug/deps/testread-4373fe013cd1418e.d
        target/debug/deps/testread-9ad5ab8b1c056beb.d
        target/debug/incremental/IOStream-347u6qvsxdlje/s-f4jm6ojmt6-18qc33v-17c5iyz2l9jsn/dep-graph.bin
        target/debug/incremental/IOStream-347u6qvsxdlje/s-f4jm6ojmt6-18qc33v-17c5iyz2l9jsn/query-cache.bin
        target/debug/incremental/IOStream-347u6qvsxdlje/s-f4jm6ojmt6-18qc33v-17c5iyz2l9jsn/work-products.bin
        target/debug/incremental/IOStream-347u6qvsxdlje/s-f4jm6ojmt6-18qc33v.lock
        target/debug/incremental/IOStream-5fuctf7zqee7/s-f4jm6ojqnp-50okkt-4qyn7iqetyjr/dep-graph.bin
        target/debug/incremental/IOStream-5fuctf7zqee7/s-f4jm6ojqnp-50okkt-4qyn7iqetyjr/query-cache.bin
        target/debug/incremental/IOStream-5fuctf7zqee7/s-f4jm6ojqnp-50okkt-4qyn7iqetyjr/work-products.bin
        target/debug/incremental/IOStream-5fuctf7zqee7/s-f4jm6ojqnp-50okkt.lock
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/13czsh4f0k2mo70m.o
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/14io6bvbqb6uvkin.o
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/4hyt80pleper970c.o
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/57qruavppapi104t.o
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/5cw2f9v14zu7kjvm.o
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/dep-graph.bin
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/query-cache.bin
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907-2jkc2tqvqzyae/work-products.bin
        target/debug/incremental/System_IO-179vnkr3ljxwc/s-f4jjwmj8va-5t3907.lock
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/134fgrmfo2rfq6ny.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/134fgrmfo2rfq6ny.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/17wluetmb77su89d.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/17wluetmb77su89d.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/1mhya9dnvgzig322.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/1mhya9dnvgzig322.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/1mi4czr0451zfj9.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/1mi4czr0451zfj9.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/1vi55kl8fzk59a30.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/1vi55kl8fzk59a30.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/21srvlbe1ybtsglg.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/21srvlbe1ybtsglg.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/2wd80h3amyd8m495.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/2wd80h3amyd8m495.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/2x2106894861jwtp.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/2x2106894861jwtp.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/39868joamzgvuavx.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/39868joamzgvuavx.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/3jqtei7ahmaxun8d.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/3jqtei7ahmaxun8d.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/3m6iximnvmhsyvvf.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/3m6iximnvmhsyvvf.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/40x3a499ag75jla9.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/40x3a499ag75jla9.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/48y1uzwwr709jwk5.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/48y1uzwwr709jwk5.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4aka98ksalwedwn6.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4aka98ksalwedwn6.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4lqjmbd41kacqtue.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4lqjmbd41kacqtue.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4r0dw0fufm68kjgc.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4r0dw0fufm68kjgc.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4v9yb7uzqk1fgt15.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/4v9yb7uzqk1fgt15.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/531mf9wb6uka33nk.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/531mf9wb6uka33nk.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/dep-graph.bin
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/query-cache.bin
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/qyuzxznjwmkxpqf.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/qyuzxznjwmkxpqf.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/rz2yvtqh5afmztv.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/rz2yvtqh5afmztv.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/thvypo6zq1d9m2n.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/thvypo6zq1d9m2n.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/work-products.bin
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/z3xjpl03xxplivx.bc.z
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96-3s9o78wbu2s71/z3xjpl03xxplivx.o
        target/debug/incremental/System_IO-1k4o9n73v2k8x/s-f4jjwmj5sg-vs5p96.lock
        target/debug/incremental/System_IO-1m4ax1r4otf52/s-f4jjf7umbb-a6xkfu-2x7fni5xz4req/dep-graph.bin
        target/debug/incremental/System_IO-1m4ax1r4otf52/s-f4jjf7umbb-a6xkfu-2x7fni5xz4req/query-cache.bin
        target/debug/incremental/System_IO-1m4ax1r4otf52/s-f4jjf7umbb-a6xkfu-2x7fni5xz4req/work-products.bin
        target/debug/incremental/System_IO-1m4ax1r4otf52/s-f4jjf7umbb-a6xkfu.lock
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/14f66wrqkea84kwg.o
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/1zojm81vmzp3p9nm.o
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/4hyt80pleper970c.o
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/57qruavppapi104t.o
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/5cw2f9v14zu7kjvm.o
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/dep-graph.bin
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/query-cache.bin
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm-fwhfmts72r3t/work-products.bin
        target/debug/incremental/System_IO-27dgjttjb2afw/s-f4jjeyjpsn-4nfdzm.lock
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/134fgrmfo2rfq6ny.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/134fgrmfo2rfq6ny.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/17wluetmb77su89d.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/17wluetmb77su89d.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/1mhya9dnvgzig322.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/1mhya9dnvgzig322.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/1mi4czr0451zfj9.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/1mi4czr0451zfj9.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/1vi55kl8fzk59a30.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/1vi55kl8fzk59a30.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/21srvlbe1ybtsglg.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/21srvlbe1ybtsglg.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/2wd80h3amyd8m495.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/2wd80h3amyd8m495.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/2z0ch166n1m2lo2i.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/2z0ch166n1m2lo2i.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/39868joamzgvuavx.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/39868joamzgvuavx.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/3jqtei7ahmaxun8d.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/3jqtei7ahmaxun8d.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/3m6iximnvmhsyvvf.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/3m6iximnvmhsyvvf.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/40x3a499ag75jla9.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/40x3a499ag75jla9.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/48y1uzwwr709jwk5.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/48y1uzwwr709jwk5.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4aka98ksalwedwn6.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4aka98ksalwedwn6.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4lqjmbd41kacqtue.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4lqjmbd41kacqtue.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4r0dw0fufm68kjgc.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4r0dw0fufm68kjgc.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4v9yb7uzqk1fgt15.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/4v9yb7uzqk1fgt15.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/531mf9wb6uka33nk.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/531mf9wb6uka33nk.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/dep-graph.bin
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/lwbz760fct99f62.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/lwbz760fct99f62.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/query-cache.bin
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/qyuzxznjwmkxpqf.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/qyuzxznjwmkxpqf.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/rz2yvtqh5afmztv.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/rz2yvtqh5afmztv.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/thvypo6zq1d9m2n.bc.z
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/thvypo6zq1d9m2n.o
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg-386f839daf6vp/work-products.bin
        target/debug/incremental/System_IO-2b4efwfusf5m6/s-f4jjeyjmpv-kt21mg.lock
        target/debug/incremental/System_IO-2qmz6d3laxe9u/s-f4jjf7upe4-15wn91x-3bqjx4xeh2cjp/dep-graph.bin
        target/debug/incremental/System_IO-2qmz6d3laxe9u/s-f4jjf7upe4-15wn91x-3bqjx4xeh2cjp/query-cache.bin
        target/debug/incremental/System_IO-2qmz6d3laxe9u/s-f4jjf7upe4-15wn91x-3bqjx4xeh2cjp/work-products.bin
        target/debug/incremental/System_IO-2qmz6d3laxe9u/s-f4jjf7upe4-15wn91x.lock
        target/debug/incremental/System_IO-dqqassmstx3i/s-f4jm2fxoaq-zgtvk8-12pxx5y91kv59/dep-graph.bin
        target/debug/incremental/System_IO-dqqassmstx3i/s-f4jm2fxoaq-zgtvk8-12pxx5y91kv59/query-cache.bin
        target/debug/incremental/System_IO-dqqassmstx3i/s-f4jm2fxoaq-zgtvk8-12pxx5y91kv59/work-products.bin
        target/debug/incremental/System_IO-dqqassmstx3i/s-f4jm2fxoaq-zgtvk8.lock
        target/debug/incremental/System_IO-tjfeq5265llz/s-f4jm2fxtpd-1fdhcmz-uq3yhzh9pa5q/dep-graph.bin
        target/debug/incremental/System_IO-tjfeq5265llz/s-f4jm2fxtpd-1fdhcmz-uq3yhzh9pa5q/query-cache.bin
        target/debug/incremental/System_IO-tjfeq5265llz/s-f4jm2fxtpd-1fdhcmz-uq3yhzh9pa5q/work-products.bin
        target/debug/incremental/System_IO-tjfeq5265llz/s-f4jm2fxtpd-1fdhcmz.lock
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/134fgrmfo2rfq6ny.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/1mhya9dnvgzig322.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/1mi4czr0451zfj9.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/1vi55kl8fzk59a30.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/21srvlbe1ybtsglg.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/23aib6v672odazqo.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/3sm0rcz0474bhpkg.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/40x3a499ag75jla9.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/48y1uzwwr709jwk5.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/49zvia3z4o1vjxvk.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/4aka98ksalwedwn6.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/4eog5e5z66tfliq.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/4hyt80pleper970c.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/4lqjmbd41kacqtue.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/53dmhd8xdj6h1kz9.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/57qruavppapi104t.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/5cw2f9v14zu7kjvm.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/dep-graph.bin
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/fu4mkua0mp8mnjj.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/query-cache.bin
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/qyuzxznjwmkxpqf.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/thvypo6zq1d9m2n.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/u8163nb5gz23fm4.o
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm-2x64rzg1k3p54/work-products.bin
        target/debug/incremental/testnewFileStream-268hhxdbbubz9/s-f4jjeys5rn-17ar5gm.lock
        target/debug/incremental/testnewFileStream-29ro69do6yne7/s-f4jjf7z8jb-tudgwd-1l6i7vfsfrfvi/dep-graph.bin
        target/debug/incremental/testnewFileStream-29ro69do6yne7/s-f4jjf7z8jb-tudgwd-1l6i7vfsfrfvi/query-cache.bin
        target/debug/incremental/testnewFileStream-29ro69do6yne7/s-f4jjf7z8jb-tudgwd-1l6i7vfsfrfvi/work-products.bin
        target/debug/incremental/testnewFileStream-29ro69do6yne7/s-f4jjf7z8jb-tudgwd.lock
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/10hcfwdmd7rpolcs.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/134fgrmfo2rfq6ny.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/1mhya9dnvgzig322.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/1mi4czr0451zfj9.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/1vi55kl8fzk59a30.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/21srvlbe1ybtsglg.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/23aib6v672odazqo.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/2b7j16jgy768osk7.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/40x3a499ag75jla9.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/48y1uzwwr709jwk5.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/4aka98ksalwedwn6.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/4hyt80pleper970c.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/4lqjmbd41kacqtue.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/4xze23y2lo1rjwy8.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/53dmhd8xdj6h1kz9.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/57qruavppapi104t.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/5cw2f9v14zu7kjvm.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/dep-graph.bin
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/fu4mkua0mp8mnjj.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/hrsqyzb890alxx7.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/query-cache.bin
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/qyuzxznjwmkxpqf.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/thvypo6zq1d9m2n.o
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27-83vdskim7h7/work-products.bin
        target/debug/incremental/testnewFileStream-2ajgmobwz7s8k/s-f4jk904knc-fj9s27.lock
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6v3kbh-1kxqx4i-hny0v40p35fr/dep-graph.bin
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6v3kbh-1kxqx4i-hny0v40p35fr/query-cache.bin
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6v3kbh-1kxqx4i-hny0v40p35fr/work-products.bin
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6pcbjm-63l100.lock
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6pwy6j-1uhxymq.lock
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6tz3k9-hcyurd.lock
        target/debug/incremental/testnewFileStream-2cxpxigkl284r/s-f4jm6v3kbh-1kxqx4i.lock
        target/debug/incremental/testnewFileStream-3oh5wip7let2h/s-f4jm2g11wn-oc8xk9-3rm1v06q23o9t/dep-graph.bin
        target/debug/incremental/testnewFileStream-3oh5wip7let2h/s-f4jm2g11wn-oc8xk9-3rm1v06q23o9t/query-cache.bin
        target/debug/incremental/testnewFileStream-3oh5wip7let2h/s-f4jm2g11wn-oc8xk9-3rm1v06q23o9t/work-products.bin
        target/debug/incremental/testnewFileStream-3oh5wip7let2h/s-f4jm2g11wn-oc8xk9.lock
        target/debug/incremental/testread-3vmtycrnu41ct/s-f4jm6oqcg6-kp23dr-1wqxkwo3rak2u/dep-graph.bin
        target/debug/incremental/testread-3vmtycrnu41ct/s-f4jm6oqcg6-kp23dr-1wqxkwo3rak2u/query-cache.bin
        target/debug/incremental/testread-3vmtycrnu41ct/s-f4jm6oqcg6-kp23dr-1wqxkwo3rak2u/work-products.bin
        target/debug/incremental/testread-3vmtycrnu41ct/s-f4jm6oqcg6-kp23dr.lock
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm5dnbu8-1j8ejy8-2d5sntgqoyo5v/dep-graph.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm5dnbu8-1j8ejy8-2d5sntgqoyo5v/query-cache.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm5dnbu8-1j8ejy8-2d5sntgqoyo5v/work-products.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6no1f0-1eqxa8n-working/dep-graph.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6no1f0-1eqxa8n-working/query-cache.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6no1f0-1eqxa8n-working/work-products.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6oa87j-174tb0n-working/dep-graph.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6oa87j-174tb0n-working/query-cache.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6oa87j-174tb0n-working/work-products.bin
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm5dnbu8-1j8ejy8.lock
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6no1f0-1eqxa8n.lock
        target/debug/incremental/testread-e3xgpclsvl6w/s-f4jm6oa87j-174tb0n.lock
        target/debug/.cargo-lock
        target/debug/libIOStream-dd5f61749d9abdc9.d
        target/debug/libIOStream-dd5f61749d9abdc9.rmeta
        target/debug/libIOStream.d
        target/debug/libIOStream.rmeta
        target/debug/libSystem_IO-e5f0b93606766702.d
        target/debug/libSystem_IO-e5f0b93606766702.rmeta
        target/debug/libSystem_IO-e67fa4f0f250d492.d
        target/debug/libSystem_IO-e67fa4f0f250d492.rmeta
        target/debug/libSystem_IO.d
        target/debug/libSystem_IO.rmeta
        target/debug/libtestnewFileStream-3329cd1be34b84f0.d
        target/debug/libtestnewFileStream-3329cd1be34b84f0.rmeta
        target/debug/libtestnewFileStream-c8efba17c1d15ab2.d
        target/debug/libtestnewFileStream-c8efba17c1d15ab2.rmeta
        target/debug/libtestnewFileStream-db641a2924d26464.d
        target/debug/libtestnewFileStream-db641a2924d26464.rmeta
        target/debug/libtestread-4373fe013cd1418e.d
        target/debug/libtestread-4373fe013cd1418e.rmeta
        target/debug/libtestread-9ad5ab8b1c056beb.d
        target/debug/libtestread-9ad5ab8b1c056beb.rmeta
        target/debug/System_IO-47ab421c246052ed.d
        target/debug/System_IO-47ab421c246052ed.exe
        target/debug/System_IO-d74e5491a0989faf.d
        target/debug/System_IO-d74e5491a0989faf.exe
        target/debug/testnewFileStream-6af5a3c2d0a98fb0.d
        target/debug/testnewFileStream-6af5a3c2d0a98fb0.exe
        target/debug/testnewFileStream-834e8d981cf4150d.d
        target/debug/testnewFileStream-834e8d981cf4150d.exe
        target/.rustc_info.json
        .gitignore
        Cargo.lock
        Cargo.toml)
